minio/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: minio
