minio/loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio-loadbalancer
  namespace: minio-tenant
  labels:
    app: minio
spec:
  type: LoadBalancer
  selector:
    v1.min.io/tenant: minio
  ports:
    - name: api
      protocol: TCP
      port: 9000
      targetPort: 9000
    - name: console
      protocol: TCP
      port: 9443
      targetPort: 9443
